RESOLVED FIXED76463
[Qt] Debug build fails with debug qt5
https://bugs.webkit.org/show_bug.cgi?id=76463
Summary [Qt] Debug build fails with debug qt5
Viatcheslav Ostapenko
Reported 2012-01-17 09:25:47 PST
After this commit https://qt.gitorious.org/qt/qtbase/commit/14b929e9c448f2cc74fa047aaf8af283b81fbaf9 debug build of qt webkit fails if built with debug version of qt5. In file included from ../../../../qt5trunk/qtbase/include/QtCore/qglobal.h:1:0, from ../../../Source/WebCore/platform/graphics/IntSize.h:44, from ../../../Source/WebCore/platform/DragImage.h:29, from ../../../Source/WebCore/page/Frame.h:33, from ../../../Source/WebCore/loader/FrameNetworkingContext.h:23, from ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.h:23, from ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.cpp:22: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/global/qglobal.h: In instantiation of ‘QTypeInfo<QNetworkCookie>’: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:413:5: instantiated from ‘void QList<T>::node_destruct(QList<T>::Node*, QList<T>::Node*) [with T = QNetworkCookie]’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:739:5: instantiated from ‘void QList<T>::dealloc(QListData::Data*) [with T = QNetworkCookie]’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:715:9: instantiated from ‘QList<T>::~QList() [with T = QNetworkCookie]’ ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.cpp:68:95: instantiated from here ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:2049:5: error: invalid application of ‘sizeof’ to incomplete type ‘QNetworkCookie’ cc1plus: warnings being treated as errors In file included from ../../../../qt5trunk/qtbase/include/QtCore/qlist.h:1:0, from ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/kernel/qobject.h:50, from ../../../../qt5trunk/qtbase/include/QtCore/qobject.h:1, from ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/io/qiodevice.h:46, from ../../../../qt5trunk/qtbase/include/QtCore/qiodevice.h:1, from ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/io/qdatastream.h:46, from ../../../../qt5trunk/qtbase/include/QtCore/qdatastream.h:1, from ../../../../qt5trunk/qtbase/include/QtCore/QDataStream:1, from ../../../Source/WebCore/platform/graphics/IntPoint.h:33, from ../../../Source/WebCore/platform/graphics/FloatSize.h:31, from ../../../Source/WebCore/platform/DragImage.h:30, from ../../../Source/WebCore/page/Frame.h:33, from ../../../Source/WebCore/loader/FrameNetworkingContext.h:23, from ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.h:23, from ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.cpp:22: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h: In member function ‘void QList<T>::node_destruct(QList<T>::Node*, QList<T>::Node*) [with T = QNetworkCookie]’: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:739:5: instantiated from ‘void QList<T>::dealloc(QListData::Data*) [with T = QNetworkCookie]’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:715:9: instantiated from ‘QList<T>::~QList() [with T = QNetworkCookie]’ ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.cpp:68:95: instantiated from here ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:414:27: error: possible problem detected in invocation of delete operator: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:414:27: error: invalid use of incomplete type ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtNetwork/../../src/network/access/qnetworkaccessmanager.h:58:7: error: forward declaration of ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:414:27: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined. ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:416:28: error: invalid use of incomplete type ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtNetwork/../../src/network/access/qnetworkaccessmanager.h:58:7: error: forward declaration of ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h: In member function ‘void QList<T>::node_copy(QList<T>::Node*, QList<T>::Node*, QList<T>::Node*) [with T = QNetworkCookie]’: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:694:9: instantiated from ‘void QList<T>::detach_helper(int) [with T = QNetworkCookie]’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:708:5: instantiated from ‘void QList<T>::detach_helper() [with T = QNetworkCookie]’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:118:80: instantiated from ‘QList<T>::QList(const QList<T>&) [with T = QNetworkCookie]’ ../../../Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.cpp:68:95: instantiated from here ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:382:17: error: invalid use of incomplete type ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtNetwork/../../src/network/access/qnetworkaccessmanager.h:58:7: error: forward declaration of ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:388:17: error: possible problem detected in invocation of delete operator: ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:388:17: error: invalid use of incomplete type ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtNetwork/../../src/network/access/qnetworkaccessmanager.h:58:7: error: forward declaration of ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:388:17: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined. ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:395:17: error: invalid use of incomplete type ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtNetwork/../../src/network/access/qnetworkaccessmanager.h:58:7: error: forward declaration of ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:401:17: error: invalid use of incomplete type ‘struct QNetworkCookie’ ../../../../qt5trunk/qtbase/include/QtNetwork/../../src/network/access/qnetworkaccessmanager.h:58:7: error: forward declaration of ‘struct QNetworkCookie’ make[2]: *** [obj/debug/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.o] Error 1 make[2]: Leaving directory `/home/sl/work/webkit2/WebKitBuild/Debug/Source' make[1]: *** [sub-api-pri-make_default-ordered] Error 2 make[1]: Leaving directory `/home/sl/work/webkit2/WebKitBuild/Debug/Source' make: *** [sub-Source-QtWebKit-pro-make_default-ordered] Error 2
Attachments
Add missing include to satisfy sizeof in QTypeInfo. (2.06 KB, patch)
2012-01-17 09:36 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2012-01-17 09:36:35 PST
Created attachment 122778 [details] Add missing include to satisfy sizeof in QTypeInfo.
WebKit Review Bot
Comment 2 2012-01-17 16:11:10 PST
Comment on attachment 122778 [details] Add missing include to satisfy sizeof in QTypeInfo. Clearing flags on attachment: 122778 Committed r105206: <http://trac.webkit.org/changeset/105206>
WebKit Review Bot
Comment 3 2012-01-17 16:11:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.