third_party/WebKit/Source/WebKit/qt/WebCoreSupport/FrameNetworkingContextQt.cpp
@@ -26,6 +26,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "qwebframe_p.h"
 #include "qwebpage.h"
 #include <QNetworkAccessManager>
+#include <QNetworkCookie>
 #include <QNetworkCookieJar>
 
 namespace WebCore {
