third_party/WebKit/Tools/QtTestBrowser/cookiejar.h
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define cookiejar_h
 
 #include <QFile>
+#include <QNetworkCookie>
 #include <QNetworkCookieJar>
 #include <QTimer>
 
